--- a/css/produktuak.css
+++ b/css/produktuak.css
@@ -1,18 +1,4 @@
 
-main
-{
-    background-color: rgb(37, 37, 37);
-    margin: 0px;
-    min-height: 75vh;
-}
-.sub-body
-{
-    padding-top: 5px;
-    width: 700px;
-    margin: auto;
-    background-color: white;
-    border-radius: 20px;
-}
 main section {
     display: grid;
     /*grid-template: repeat(2,auto) / repeat(2,fr);*/
@@ -55,16 +41,6 @@ h1
     grid-column: 3/span 2;
     border: 1px dotted black;
 }
-#eskaintza7{
-    grid-row: 2/3;
-    grid-column: 5/span 2;
-    border: 1px dotted black;
-}
-#eskaintza8{
-    grid-row: 2/3;
-    grid-column: 7/span 2;
-    border: 1px dotted black;
-}
 .sub-body>section>div{
     margin: auto;
     border-radius: 10px;
@@ -85,9 +61,19 @@ h1
         font-family: "Prompt", sans-serif;
         font-weight: 200;
         font-style: normal;
-      
+    
 }
 .prezioa
 {
     color: red;
+}
+@media (max-width: 768px) {
+    
+    main section {
+        display: grid;
+        /*grid-template: repeat(4,auto) / repeat(1,fr);*/
+        grid-template: auto auto / 1fr 1fr;
+        row-gap: 15px;
+        column-gap: 15px;
+    }
 }
