--- a/css/katalogoa.css
+++ b/css/katalogoa.css
@@ -19,7 +19,6 @@ section {
 section{
     text-align: center;
 }
-
 .eskaintza>a>img
 {
     border-top-left-radius: 10px;
@@ -56,5 +55,8 @@ section{
     .eskaintza
     {
         margin:auto;
+    }
+    .sub-body{
+        
     }
 }
