--- a/css/produktuak.css
+++ b/css/produktuak.css
@@ -11,36 +11,6 @@ h1
     text-align: center;
     margin: 15px;
 }
-#eskaintza1{
-    grid-row: 1/2;
-    grid-column: 1/span 3;
-    border: 1px dotted black;
-}
-#eskaintza2{
-    grid-row: 1/2;
-    grid-column: 4/span 3;
-    border: 1px dotted black;
-}
-#eskaintza3{
-    grid-row: 1/2;
-    grid-column: 7/span 3;
-    border: 1px dotted black;
-}
-#eskaintza4{
-    grid-row: 1/2;
-    grid-column: 10/span 3;
-    border: 1px dotted black;
-}
-#eskaintza5{
-    grid-row: 2/3;
-    grid-column: 1/span 2;
-    border: 1px dotted black;
-}
-#eskaintza6{
-    grid-row: 2/3;
-    grid-column: 3/span 2;
-    border: 1px dotted black;
-}
 .sub-body>section>div{
     margin: auto;
     border-radius: 10px;
@@ -56,6 +26,7 @@ h1
 .sub-body section div img{
     width: 200px;
     height: 185px;
+    
 }
 .sub-body>section>div>* {
         font-family: "Prompt", sans-serif;
@@ -63,8 +34,20 @@ h1
         font-style: normal;
     
 }
+
+.eskaintzak
+{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 40px;
+}
+.antes
+{
+    text-decoration: line-through;
+}
 .prezioa
 {
+    text-decoration: none;
     color: red;
 }
 @media (max-width: 768px) {
@@ -74,6 +57,10 @@ h1
         /*grid-template: repeat(4,auto) / repeat(1,fr);*/
         grid-template: auto auto / 1fr 1fr;
         row-gap: 15px;
-        column-gap: 15px;
+        column-gap: 5%;
+    }
+    .sub-body section div img{
+        width: 100%;
+        height: 60%;
     }
 }
