--- a/style.css
+++ b/style.css
@@ -208,12 +208,14 @@ footer
   
   
   .aside {
-    background-color: white;
-    padding: 15px;
-    color: black;
     text-align: center;
-    font-size: 14px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  .aside>img
+  {
+    border-radius: 10px;
+    width: 90%;
+    height: 100%;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   }
   
   /* For mobile phones: */
