--- a/css/produktuak.css
+++ b/css/produktuak.css
@@ -11,7 +11,7 @@ h1
     text-align: center;
     margin: 15px;
 }
-.sub-body>section>div{
+section>div{
     margin: auto;
     border-radius: 10px;
     padding: 10px;
@@ -19,22 +19,20 @@ h1
     cursor: pointer;
     transition: 0.5s;
 }
-.sub-body>section>div:hover{
+section>div:hover{
     transition: 0.5s;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
-.sub-body section div img{
+section div img{
     width: 200px;
     height: 185px;
     
 }
-.sub-body>section>div>* {
+section>div>* {
         font-family: "Prompt", sans-serif;
         font-weight: 200;
         font-style: normal;
-    
 }
-
 .eskaintzak
 {
     display: flex;
@@ -59,7 +57,7 @@ h1
         row-gap: 15px;
         column-gap: 5%;
     }
-    .sub-body section div img{
+    section div img{
         width: 100%;
         height: 60%;
     }
