--- a/style.css
+++ b/style.css
@@ -217,12 +217,27 @@ footer
     height: 100%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   }
-  
+  .nobedadeak>div{
+    background-color: white;
+  }
   /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
   }
-  
+.nobedadeak {
+    display: grid;
+    /*grid-template: repeat(4,auto) / repeat(1,fr);*/
+    grid-template: auto auto / 1fr 1fr;
+    row-gap: 15px;
+    column-gap: 5%;
+}
+.nobedadeak div img{
+    width: 100%;
+    height: 40%;
+}
+#nobedadeak{
+    color: white;
+}
   @media only screen and (min-width: 600px) {
     /* For tablets: */
     .col-s-1 {width: 8.33%;}
@@ -253,3 +268,4 @@ footer
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
   }
+  
