--- a/css/produktuak.css
+++ b/css/produktuak.css
@@ -61,4 +61,17 @@ section>div>* {
         width: 100%;
         height: 60%;
     }
+    .eskaintzak-media {
+        display: grid;
+        /*grid-template: repeat(4,auto) / repeat(1,fr);*/
+        grid-template: auto auto / 1fr;
+        row-gap: 15px;
+        column-gap: 5%;
+    }
+    .eskaintzak-seccion{
+        display: flex;
+    }
+    .eskaintzak-seccion div{
+        margin-inline: 2%;
+    }
 }
